# python-starter-kit

./: .gitignore  03-path_query_params.py
00-bases/: pyproject.toml
00-bases/01-first-steps/: 00-conventions.py  01-data_types.py  02-string-indexes.py  03-immutable.py  04-convertions.py
00-bases/02-conditionals/: 01-if.py  04-truthy_falsey.py  08-membership_operators.py  09-is_equal.py  10-short_circuiting.py
00-bases/03-lists/: 01-lists.py  02-list_slicing.py  03-list_methods_adding.py  04-list_methods_remove.py  05-list_methods_search.py  06-list_methods_sort.py  07-list_others.py  09-list_unpacking.py
00-bases/04-dictionaries/: 03-dictionaries_methods_search.py  04-dictionaries_methods_add_remove.py  06-dict_collections.py
00-bases/05-tuples-sets/: 01-tuple.py  02-sets.py  03-sets_methods_part1.py  04-sets_methods_part2.py  05-sets_methods_part3.py  06-sets_exercise.py  07-converts.py
00-bases/06-loops/: 01-for_loop.py  02-iterables.py  03-range.py  04-enumerate.py  09-nested_dict.py
00-bases/07-functions/: 05-docstring.py  08-nonlocal_keyword.py  09-args-kwargs.py  10-functions_exercise.py
00-bases/08-poo_a/: 02-object.py  03-attributes_methods_public.py  04-attributes_methods_protected.py  05-attributes_methods_private.py  06-class_static_methods.py
00-bases/09-poo_b/: 01-abstraction.py  02-encapsulation.py  04-polymorphism.py  05-object_introspection.py  06-super.py  07-multiple_inheritance.py  08-composition.py  (+3 more)
01-first-steps/: 01-intro.py  02-pydantic.py  04-database-sqlalchemy.py  pyproject.toml
02-modularization/: pyproject.toml
(+36 files in other folders)
